--- a/fedweb/base.layout.tmpl
+++ b/fedweb/base.layout.tmpl
@@ -1,13 +1,14 @@
+{{define "base"}}
+<!doctype html>
 <html>
 	<head>
-		<title>{{.Title}}</title>
+		<title>{{template "title" .}}</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<body>
-		<h1>{{.Title}}</h1>
-
-		<p>Hello, World!</p>
+		{{template "body" .}}
 	</body>
 </html>
+{{end}}
