--- a/fedweb/error.page.tmpl
+++ b/fedweb/error.page.tmpl
@@ -6,5 +6,7 @@
 
 {{define "body"}}
 	<h1>Error {{.Status}}: {{.StatusText}}</h1>
-	<p>{{.Message}}</p>
+	<hr>
+	<p>{{.Description}}</p>
+	<p>{{.Cause}}</p>
 {{end}}
