First interaction between fedd and fedweb
Fetching users works; rendering doesn't

--- a/fedweb/error.page.tmpl
+++ b/fedweb/error.page.tmpl
@@ -8,5 +8,8 @@
 	<h1>Error {{.Status}}: {{.StatusText}}</h1>
 	<hr>
 	<p>{{.Description}}</p>
-	<p>{{.Cause}}</p>
+	{{if .Cause}}
+		<hr>
+		<code>{{.Cause}}</code>
+	{{end}}
 {{end}}
