Render pretty Notes

--- a/fedweb/collection.page.tmpl
+++ b/fedweb/collection.page.tmpl
@@ -6,15 +6,8 @@
 
 {{define "body"}}
 	{{range .Items}}
-		<div class="card">
-			{{if eq .type "Person"}}
-				{{template "person" .}}
-			{{end}}
-			{{if eq .type "Note"}}
-				{{template "note" .}}
-			{{end}}
-		</div>
+		{{template "card" .}}
 	{{else}}
-		<p>Here be dragons.</p>
+		<p>nothing here</p>
 	{{end}}
 {{end}}
