--- a/fedweb/res/ordered_collection_page.fragment.tmpl
+++ b/fedweb/res/ordered_collection_page.fragment.tmpl
@@ -1,11 +1,11 @@
-{{define "person"}}
+{{define "ordered_collection_page"}}
 	<div class="warning">
 		<div class="cardmeta">
 			Anonymous
 		</div>
 
 		<div class="cardmain">
-			<p>Type <code>Person</code> not yet implemented.</p>
+			<p>Type <code>OrderedCollectionPage</code> not yet implemented.</p>
 		</div>
 	</div>
 {{end}}
