WebVocab: add XIter accessor
I think I need to re-think how collections work in fedweb.
Right now it's not clear where lists get resolved. Not even
thinking about pagination yet.

--- a/fedweb/res/collection.page.tmpl
+++ b/fedweb/res/collection.page.tmpl
@@ -8,6 +8,8 @@
 	{{range .Items}}
 		{{template "card" .}}
 	{{else}}
-		<p>nothing here</p>
+		<p style="text-align: center; font-style: italic">
+			here be dragons
+		</p>
 	{{end}}
 {{end}}
