--- a/fedweb/res/not_implemented.fragment.tmpl
+++ b/fedweb/res/not_implemented.fragment.tmpl
@@ -1,4 +1,5 @@
-{{define "person"}}
+{{define "not_implemented"}}
+
 	<div class="card">
 		<div class="warning">
 			<div class="cardmeta">
@@ -6,7 +7,7 @@
 			</div>
 
 			<div class="cardmain">
-				<p>Type <code>Person</code> not yet implemented.</p>
+				<p>Type <code>{{.Type}}</code> not yet implemented.</p>
 			</div>
 		</div>
 	</div>
