Rework templating for individual activity pub objects
We now render them when creating WebVocab instances and then just
paste the HTML into the main layout.

This has the advantage that error handling gets easier (we don't
throw errors in the template engine). Caching should get way easier
as well. Finally, we don't have to put control flow into templates,
which was a major pain before.

--- a/fedweb/res/collection.page.tmpl
+++ b/fedweb/res/collection.page.tmpl
@@ -5,11 +5,5 @@
 {{end}}
 
 {{define "body"}}
-	{{range .Items}}
-		{{template "card" .}}
-	{{else}}
-		<p style="text-align: center; font-style: italic">
-			here be dragons
-		</p>
-	{{end}}
+	{{.Item.Fragment}}
 {{end}}
