--- a/fedweb/res/person.fragment.tmpl
+++ b/fedweb/res/person.fragment.tmpl
@@ -1,13 +1,11 @@
-{{define "person"}}
-	<div class="card">
-		<div class="warning">
-			<div class="cardmeta">
-				Anonymous
-			</div>
+<div class="card">
+	<div class="warning">
+		<div class="cardmeta">
+			<span style="font-weight: bold">{{.XFrom}}</span>
+		</div>
 
-			<div class="cardmain">
-				<p>Type <code>Person</code> not yet implemented.</p>
-			</div>
+		<div class="cardmain">
+			<p>Type <code>{{.Type}}</code> not yet implemented.</p>
 		</div>
 	</div>
-{{end}}
+</div>
