Render collection pages
For example, rendering inboxes now works

--- a/fedweb/res/not_implemented.fragment.tmpl
+++ b/fedweb/res/not_implemented.fragment.tmpl
@@ -1,7 +1,7 @@
 <div class="card">
 	<div class="warning">
 		<div class="cardmeta">
-			Anonymous
+			<span style="font-weight: bold">{{.XFrom}}</span>
 		</div>
 
 		<div class="cardmain">
