--- a/fedweb/res/note.fragment.tmpl
+++ b/fedweb/res/note.fragment.tmpl
@@ -1,6 +1,7 @@
 <div class="card">
 	<div class="cardmeta">
 		<span style="font-weight: bold">{{.XFrom}}</span>
+		{{.Published}}
 	</div>
 
 	<div class="cardmain">
