--- a/fedweb/res/note.fragment.tmpl
+++ b/fedweb/res/note.fragment.tmpl
@@ -1,5 +1,5 @@
 <div class="card">
-	<div class="cardmeta">
+	<div class="cardheader">
 		<span style="font-weight: bold">{{.XFrom}}</span>
 		{{.Published}}
 	</div>
@@ -13,4 +13,11 @@
 			{{.Content}}
 		</p>
 	</div>
+
+	<div class="cardfooter">
+	    <img class="svgbutton" src="/static/reply.svg">
+	    <img class="svgbutton" src="/static/repeat.svg">
+	    <img class="svgbutton" src="/static/like.svg">
+	</div>
+
 </div>
