--- a/fedweb/res/person.fragment.tmpl
+++ b/fedweb/res/person.fragment.tmpl
@@ -1,6 +1,6 @@
 <div class="card">
 	<div class="warning">
-		<div class="cardmeta">
+		<div class="cardheader">
 			<span style="font-weight: bold">{{.XFrom}}</span>
 		</div>
 
