--- a/fedweb/res/base.layout.tmpl
+++ b/fedweb/res/base.layout.tmpl
@@ -8,6 +8,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8">
 		<link rel=stylesheet href="/static/fedweb.css">
+		<script src="/static/resize_submit.js"></script>
 	</head>
 
 	<body>
