Prompt the user with a nice message

--- a/fedweb/res/collection.page.tmpl
+++ b/fedweb/res/collection.page.tmpl
@@ -8,7 +8,7 @@
 	<div class="card">
 		<div class="cardmain">
 			<form action="/submit" method="post">
-				<textarea oninput="SubmitInput()" id="submit" class="submit" autocomplete="off" placeholder="What are you thinking about?"></textarea>
+				<textarea oninput="SubmitInput()" id="submit" class="submit" autocomplete="off" placeholder="{{.SubmitPrompt}}"></textarea>
 			</form>
 		</div>
 
