--- a/fedweb/res/base.layout.tmpl
+++ b/fedweb/res/base.layout.tmpl
@@ -16,19 +16,19 @@
 		    <!-- These divs are so close to each other because if we put each in a seperate line,
 		         we get ugly gaps on the tabs. -->
 		    <a href="/stream">
-			    <div class={{if eq .Selected "Stream"}}"navbuttonselected"{{else}}"navbutton"{{end}}>
+			    <div class={{if eq .Context.Selected "Stream"}}"navbuttonselected"{{else}}"navbutton"{{end}}>
 				Stream
 			    </div>
 		    </a><a href="/liked">
-			    <div class={{if eq .Selected "Liked"}}"navbuttonselected"{{else}}"navbutton"{{end}}>
+			    <div class={{if eq .Context.Selected "Liked"}}"navbuttonselected"{{else}}"navbutton"{{end}}>
 				Liked
 			    </div>
 		    </a><a href="/following">
-			    <div class={{if eq .Selected "Following"}}"navbuttonselected"{{else}}"navbutton"{{end}}>
+			    <div class={{if eq .Context.Selected "Following"}}"navbuttonselected"{{else}}"navbutton"{{end}}>
 				Following
 			    </div>
 		    </a><a href="/followers">
-			    <div class={{if eq .Selected "Followers"}}"navbuttonselected"{{else}}"navbutton"{{end}}>
+			    <div class={{if eq .Context.Selected "Followers"}}"navbuttonselected"{{else}}"navbutton"{{end}}>
 				Followers
 			    </div>
 		    </a>
