--- a/fedweb/res/base.layout.tmpl
+++ b/fedweb/res/base.layout.tmpl
@@ -5,6 +5,7 @@
 <html>
 	<head>
 		<title>{{template "title" .}}</title>
+		<link rel="icon" href="/static/inbox.svg">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8">
 		<link rel=stylesheet href="/static/fedweb.css">
