Encode cookie context as base64
Apparently you are limited in what you can use in cookies, in
particular no quotes are allowes which is a problem for json.

--- a/fedweb/res/base.layout.tmpl
+++ b/fedweb/res/base.layout.tmpl
@@ -39,6 +39,12 @@
 			{{template "flash" .}}
 			{{template "body" .}}
 		</main>
+
+		<footer>
+			<code>
+				username={{.Context.Username}} iri={{.Context.ActorIRI}}
+			</code>
+		</footer>
 	</body>
 </html>
 {{end}}
