--- a/fedweb/res/flash.fragment.tmpl
+++ b/fedweb/res/flash.fragment.tmpl
@@ -3,6 +3,7 @@
 		<div class="card">
 			<div class="flash">
 				<div class="cardmain">
+					<img src="/static/check.svg">
 					{{.}}
 				</div>
 			</div>
@@ -14,6 +15,7 @@
 			<div class="warning">
 				<div class="flash">
 					<div class="cardmain">
+						<img src="/static/warning.svg">
 						{{.}}
 					</div>
 				</div>
@@ -26,6 +28,7 @@
 			<div class="error">
 				<div class="flash">
 					<div class="cardmain">
+						<img src="/static/error.svg">
 						{{.}}
 					</div>
 				</div>
