If a user authenticates with /login, create a code for them and write that code into the cookie.

--- a/res/login.page.tmpl
+++ b/res/login.page.tmpl
@@ -7,7 +7,7 @@
 {{define "body"}}
 	<form class="loginform" action="/login" method="post">
 		<input type="text" name="username" placeholder="Username">
-		<input type="url" name="iri" placeholder="Actor IRI">
-		<input type="submit" value="log in">
+		<input type="password" name="password" placeholder="Password">
+		<input type="submit" value="Log In">
 	</form>
 {{end}}
