res: Make reply/repeat/like buttons forms

--- a/res/collection.page.tmpl
+++ b/res/collection.page.tmpl
@@ -8,11 +8,11 @@
 	<div class="card">
 		<form action="/submit" method="post">
 			<div class="cardmain">
-					<textarea oninput="PostInput()" id="postinput" class="postinput" name="postinput" autocomplete="off" placeholder="{{.SubmitPrompt}}"></textarea>
+				<textarea oninput="PostInput()" id="postinput" class="postinput" name="postinput" autocomplete="off" placeholder="{{.SubmitPrompt}}"></textarea>
 			</div>
 
 			<div class="cardfooter">
-				<input class="svgbutton" type="image" src="/static/send.svg" alt="Send" />
+				<input class="svgbutton" type="image" src="/static/send.svg" title="Publish" />
 			</div>
 		</form>
 
