--- a/res/note.fragment.tmpl
+++ b/res/note.fragment.tmpl
@@ -15,9 +15,17 @@
 	</div>
 
 	<div class="cardfooter">
-		<img class="svgbutton" src="/static/reply.svg">
-		<img class="svgbutton" src="/static/repeat.svg">
-		<img class="svgbutton" src="/static/like.svg">
+		<form class="svgform" action="/reply" method="post">
+			<input class="svgbutton" type="image" src="/static/reply.svg" title="Reply" />
+		</form>
+
+		<form class="svgform" action="/repeat" method="post">
+			<input class="svgbutton" type="image" src="/static/repeat.svg" title="Repeat" />
+		</form>
+
+		<form class="svgform" action="/like" method="post">
+			<input class="svgbutton" type="image" src="/static/like.svg" title="Like" />
+		</form>
 	</div>
 
 </div>
